# My-Shell

./: .gitignore  Makefile  README.md  app.py  config.default.yaml  init.py  main.css  pyproject.toml  requirements.txt  run.sh
config/: main.css
config/hypr/: colors.conf  hyprlock.conf  overrides.conf
modules/: bar.py  battery.py  bluetooth.py  brightness.py  clipboard.py  color_picker.py  corners.py  dismissible_window.py  dock.py  icons.py  language.py  launcher.py  metrics.py  multi_monitor.py  notch.py  notification.py  osd.py  power.py  power_profile.py  screen_record.py  screenshot.py  settings.py  sunset.py  tailscale.py  time.py  tray.py  volume.py  wallpaper.py  weather.py  wifi.py  wired.py  workspaces.py
modules/desktop_widget/: registry.py  source.py
services/: base_conf.py  color-picker.sh  config.py  conversion.py  interfaces.py  logger.py  metrics.py  network.py  open-settings.sh  screen-record.sh  tailscale.py
styles/: bar.css  bar.mcss  battery.css  battery.mcss  bluetooth.css  bluetooth.mcss  clipboard.css  clipboard.mcss  colors.css  corners.css  corners.mcss  dock.css  language.css  language.mcss  launcher.css  launcher.mcss  main.mcss  metrics.css  metrics.mcss  notch.css  notch.mcss  notification.css  notification.mcss  osd.css  osd.mcss  power-profile.css  power.css  power.mcss  screenshot.css  settings-gui.mcss  settings.css  settings.mcss  tailscale.css  tailscale.mcss  time.css  time.mcss  tray.css  tray.mcss  volume.css  volume.mcss  (+11 more)
styles/interpreter/: main.py
workflows/: dev.sh  format.sh  shared.sh  update.sh  version-bump.sh
(+2 files in other folders)
